[gd_scene load_steps=3 format=3 uid="uid://b3gkpdkvofw8o"]

[ext_resource type="Script" path="res://apps/whiteboard/whiteboard.gd" id="1_p855i"]
[ext_resource type="PackedScene" uid="uid://1jod1ib1vj41" path="res://apps/whiteboard/lorien/InfiniteCanvas/InfiniteCanvas.tscn" id="1_scpy2"]

[node name="whiteboard" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p855i")

[node name="InfiniteCanvas" parent="." instance=ExtResource("1_scpy2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
stretch = true

[connection signal="mouse_entered" from="InfiniteCanvas" to="." method="_on_InfiniteCanvas_mouse_entered"]
[connection signal="mouse_exited" from="InfiniteCanvas" to="." method="_on_InfiniteCanvas_mouse_exited"]
